[project]
name = "ignore-manager"
version = "0.0.1"
description = "ADHD Framework manager: ignore_manager"
requires-python = ">=3.11"
dependencies = [
    "logger-util",
]

[tool.adhd]
type = "manager"
layer = "runtime"

[tool.uv.sources]
logger-util = { workspace = true }
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
