[project]
name = "ignore-manager"
version = "0.0.1"
description = "ADHD Framework manager: ignore_manager"
requires-python = ">=3.11"
dependencies = [
    "logger-util",
]

[project.urls]
Repository = "https://github.com/AI-Driven-Highspeed-Development/ignore_manager"

[tool.adhd]
layer = "foundation"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build]
dev-mode-dirs = [".."]

[tool.uv.sources]
logger-util = { workspace = true }
